movieLibrary old removed movieLibrary ok

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,19 @@
-src/ch1_variables
-ch2_if
-ch3_switch
-ch4_forLoop
-ch5_arrays
-ch6_tryCatch
-ch7_methods
-ch8_oop
-ch9_constructor
-ch10_lists
-ch11_private
-ch12_inheritance
-ch13_static
-ch14_ObjectAsField
-ch15_random
-ch16_finaldemo
+
+/src/ch1_variables/
+/src/ch2_if/
+/src/ch3_switch/
+/src/ch4_forLoop/
+/src/ch5_arrays/
+/src/ch6_tryCatch/
+/src/ch7_methods/
+/src/ch8_oop/
+/src/ch9_constructor/
+/src/ch10_lists/
+/src/ch11_private/
+/src/ch12_inheritance/
+/src/ch13_static/
+/src/ch14_ObjectAsField/
+/src/ch15_random/
+/src/ch16_finaldemo/
+/src/MovieLibraryOld/
 /src/Main.java
